# new-memory-system

./: .gitignore  README.md  build-package.sh  install.sh  memory_config.yaml  memory_mcp_server.py  memory_mcp_server_lite.py  model_config.yaml.example  model_config.yaml.template  pyproject.toml
hooks/: README_SESSION_SUMMARY.md  auto_save_memory.py  auto_save_memory_backup_20260326_214446.py  auto_save_memory_backup_before_session_fix_20260326_215943.py  experience_learning.py  llm_utils.py  session-end.ps1  session-end.sh  session-start.ps1  session-start.sh  session_close_hook.py  session_saver_v2.py  session_start_context.py  session_summary.py  test_experience_learning.py
memory_system/: __init__.py  config.py  logging_config.py  mcp_server.py  opencode_client.py  session.py
memory_system/ai/: __init__.py  ai_extractor.py  ai_summarizer.py  llm_client.py  llm_service.py
memory_system/api/: __init__.py  routes.py
memory_system/auto_save/: __init__.py  auto_recorder.py
memory_system/context/: __init__.py  assembler.py  capacity_controller.py
memory_system/core/: __init__.py  possession.py  recall.py  trigger.py  writer.py
memory_system/extraction/: __init__.py  keyword_extractor.py  noise_filter.py  summarizer.py  summary_cache.py
memory_system/models/: __init__.py  daily_memory.py  index.py  soul.py
memory_system/personas/: __init__.py  manager.py  models.py
memory_system/prompts/: experience_extraction.yaml  experience_judge.yaml  skill_creation.yaml
memory_system/scheduler/: __init__.py  detector.py  dispatcher.py
memory_system/stats/: __init__.py  token_stats.py
memory_system/storage/: __init__.py  file_lock.py  file_store.py  path_manager.py
memory_system/vector/: __init__.py  chroma_store.py  embedding.py  vector_store.py
